Added navbar and footer

--- a/public/materialize/css/materialize.css
+++ b/public/materialize/css/materialize.css
@@ -3,7 +3,18 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
-.materialize-red {
+
+    header, main, footer {
+      padding-left: 240px;
+    }
+
+    @media only screen and (max-width : 992px) {
+      header, main, footer {
+        padding-left: 0;
+      }
+    }
+
+ .materialize-red {
   background-color: #e51c23 !important;
 }
 
