--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,9 @@
-<h1>Welcome to Prickly Plant</h1>
+<div class= 'container'>
+  <h4>Welcome to Prickly Plant</h4>
+  <div class= 'row'>
+    <div class= 'col-xs-3'>
+      <a href='/products'><i class="large material-icons">shopping_basket</i></a>
+      <a href='/suppliers'><i class="large material-icons">store</i></a>
+    </div>
+  </div>
+</div>
