Added supplier data that can be used in the database later on

--- a/views/suppliers.handlebars
+++ b/views/suppliers.handlebars
@@ -1,1 +1,38 @@
-<h1>Suppliers</h1>
+<div class='container'>
+  <h1>Suppliers</h1>
+  <div class='row'>
+    <div class='col-xs-12'>
+      <div class='table-responsive'>
+        <table class='table table-striped'>
+          <thead>
+            <tr>
+              <th>Supplier Name</th>
+            </tr>
+          </thead>
+        </table>
+         <ul class="collapsible popout" data-collapsible="accordion">
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i>Sheilam nursery - Cactus and Succulent Garden</div>
+              <div class="collapsible-body"><p>Situated at Klaasvoogds West Road, Robertson 6705. This Nursery was established in 1954 and now has over 2000 species of plants.</br><strong>Contact:</strong> Phone | 023 626 4133</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i>Hart Nursery</div>
+              <div class="collapsible-body"><p>Situated at 350 Ottery Rd, Ottery, Cape Town, 7800. Hart nursery is a cute little shop that's not to far away.</br><strong>Contact:</strong> Phone | 021 703 8689</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i>House of Succulents</div>
+              <div class="collapsible-body"><p>Situated at 90 Raats Drive, Tableview, Cape Town. House of Succulents is a nursery dedicated to succulents and grasses.</br><strong>Contact:</strong> Lorraine Brennand | 079 374 8618</br><strong>Email:</strong> lorraine@houseofsucculents.co.za</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i>Kokerboom Nursery</div>
+              <div class="collapsible-body"><p>Situated at 74 Voortrekker Street, Vanrhynsdorp 8170. This nursery cultivates rare succulents and quiver trees.</br><strong>Contact:</strong> Phone | 027 219 1062</p></div>
+            </li>
+            <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>Selecta Succlents</div>
+                <div class="collapsible-body"><p>Situated at Frontier smallholding, Kruispad, 7560 Brackenfell. This is a whole sale succulent nursery.</br><strong>Contact:</strong> Phone | 021 981 2439</p></div>
+              </li>
+          </ul>
+        </div>
+    </div>
+  </div>
+</div>
