--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,9 @@
       <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
 
       <title>pricklyPlant</title>
+
+      <!-- custom css -->
+      <link href="/main.css" rel="stylesheet">
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -19,12 +22,12 @@
     </nav>
       {{{body}}}
       <footer class="page-footer">
-        <div class="footer-copyright">
+          <div class="footer-copyright">
             <div class="container">
-            By Nurha Leite
-            <a class="grey-text text-lighten-4 right" href="#!"></a>
+                By Nurha Leite
+            <!-- <a class="grey-text text-lighten-4 right" href="#!"></a> -->
+              </div>
             </div>
-          </div>
         </footer>
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
