--- a/views/suppliers.handlebars
+++ b/views/suppliers.handlebars
@@ -12,7 +12,7 @@
         </table>
          <ul class="collapsible popout" data-collapsible="accordion">
             <li>
-              <div class="collapsible-header"><i class="material-icons">place</i>Sheilam nursery - Cactus and Succulent Garden</div>
+              <div class="collapsible-header"><i class="material-icons">place</i>Sheilam nursery</div>
               <div class="collapsible-body"><p>Situated at Klaasvoogds West Road, Robertson 6705. This Nursery was established in 1954 and now has over 2000 species of plants.</br><strong>Contact:</strong> Phone | 023 626 4133</p></div>
             </li>
             <li>
@@ -21,7 +21,7 @@
             </li>
             <li>
               <div class="collapsible-header"><i class="material-icons">place</i>House of Succulents</div>
-              <div class="collapsible-body"><p>Situated at 90 Raats Drive, Tableview, Cape Town. House of Succulents is a nursery dedicated to succulents and grasses.</br><strong>Contact:</strong> Lorraine Brennand | 079 374 8618</br><strong>Email:</strong> lorraine@houseofsucculents.co.za</p></div>
+              <div class="collapsible-body"><p>Situated at 90 Raats Drive, Tableview, Cape Town. House of Succulents is a nursery dedicated to succulents and grasses.</br><strong>Contact:</strong> Lorraine | 079 374 8618</br><strong>Email:</strong> lorraine@houseofsucculents.co.za</p></div>
             </li>
             <li>
               <div class="collapsible-header"><i class="material-icons">place</i>Kokerboom Nursery</div>
