Moved footer down

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,13 +17,13 @@
     <body>
       <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo">Logo</a>
       </div>
     </nav>
       {{{body}}}
       <footer class="page-footer">
           <div class="footer-copyright">
-            <div class="container">
+            <div class="textContainer">
                 By Nurha Leite
             <!-- <a class="grey-text text-lighten-4 right" href="#!"></a> -->
               </div>
