--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,13 @@
-/*.page-footer {
+.page-footer {
+  height: 55px;
   position: absolute;
   right: 0;
   bottom:0;
   left:0;
   padding: 1em;
   text-align: left;
-}*/
+}
+
+.textContainer {
+  text-align: right;
+}
