unfixed footer and added icons to home page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,9 +1,13 @@
 <div class= 'container'>
-  <h4>Welcome to Prickly Plant</h4>
+  <h5>Welcome to Prickly Plant</h5>
   <div class= 'row'>
     <div class= 'col-xs-3'>
       <a href='/products'><i class="large material-icons">shopping_basket</i></a>
+      <a href='/categories'><i class="large material-icons">description</i></a>
       <a href='/suppliers'><i class="large material-icons">store</i></a>
+      <a href='/purchases'><i class="large material-icons">shopping_cart</i></a>
+      <a href='/sales'><i class="large material-icons">trending_up</i></a>
+      <a href='/users'><i class="large material-icons">supervisor_account</i></a>
     </div>
   </div>
 </div>
