--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,4 @@
-.page-footer {
+/*.page-footer {
   height: 55px;
   position: absolute;
   right: 0;
@@ -10,4 +10,14 @@
 
 .textContainer {
   text-align: right;
-}
+}*/
+
+body {
+   display: flex;
+   min-height: 100vh;
+   flex-direction: column;
+ }
+
+ main {
+   flex: 1 0 auto;
+ }
