Fixed footer, created customers table and named icons

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,50 @@
-<div class= 'container'>
+<div class= 'container center'>
   <h5>Welcome to Prickly Plant</h5>
   <div class= 'row'>
-    <div class= 'col-xs-3'>
-      <a href='/products'><i class="large material-icons">shopping_basket</i></a>
-      <a href='/categories'><i class="large material-icons">description</i></a>
-      <a href='/suppliers'><i class="large material-icons">store</i></a>
-      <a href='/purchases'><i class="large material-icons">shopping_cart</i></a>
-      <a href='/sales'><i class="large material-icons">trending_up</i></a>
-      <a href='/users'><i class="large material-icons">supervisor_account</i></a>
+    <div class="col s4">
+      <a href='/products'><i class="large material-icons orange-text">shopping_basket</i>
+      <br/>
+      <small>Products</small>
+      </a>
     </div>
+    <div class="col s4">
+      <a href='/categories'><i class="large material-icons orange-text">description</i>
+      <br/>
+      <small>Categories</small>
+      </a>
+    </div>
+    <div class="col s4">
+      <a href='/suppliers'><i class="large material-icons orange-text">store</i>
+      <br/>
+      <small>Suppliers</small>
+      </a>
+    </div>
+    <div class="col s4">
+      <a href='/purchases'><i class="large material-icons orange-text">shopping_cart</i>
+      <br/>
+      <small>Suppliers</small>
+      </a>
+    </div>
+    <div class="col s4">
+      <a href='/sales'><i class="large material-icons orange-text">trending_up</i>
+      <br/>
+      <small>Sales</small>
+      </a>
+    </div>
+    <div class="col s4">
+      <a href='/users'><i class="large material-icons orange-text">supervisor_account</i>
+      <br/>
+      <small>Customers</small>
+      </a>
+    </div>
+
+
+
+
+
+
+
+
+
   </div>
 </div>
