--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,16 +1,50 @@
 <div class='container'>
-  <h1>Users</h1>
+  <h1>Customers</h1>
   <div class='row'>
     <div class='col-xs-12'>
       <div class='table-responsive'>
         <table class='table table-striped'>
           <thead>
             <tr>
-              <th>Users</th>
+              <th>Customers</th>
             </tr>
           </thead>
         </table>
-      </div>
+         <ul class="collapsible popout" data-collapsible="accordion">
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i><strong>Nurha Leite</strong></div>
+              <div class="collapsible-body">
+                <div class="container">
+                  <div class="row">
+                    <div class="col s12 m4"><strong>Contact:</strong> 078 705 6055</div>
+                    <div class="col s12 m4"><strong>Email:</strong> nurha@projectcodex.co</div>
+                    <div class="col s12 m4"><strong>Address:</strong> 54 Vredehoek Avenue Vredehoek</div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i><strong>Jean Grey</strong></div>
+              <div class="collapsible-body">
+                <div class="row">
+                  <div class="col s12 m4"><strong>Contact:</strong> 079 548 6325</div>
+                  <div class="col s12 m4"><strong>Email:</strong> jean@gmail.com</div>
+                  <div class="col s12 m4"><strong>Address:</strong> 54 Vredehoek Avenue Vredehoek</div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="material-icons">place</i><strong>Peter Parker</strong></div>
+              <div class="collapsible-body">
+                <div class="row">
+                  <div class="col s12 m4"><strong>Contact:</strong> 078 105 1036</div>
+                  <div class="col s12 m4"><strong>Email:</strong> peter@gmail.com</div>
+                  <div class="col s12 m4"><strong>Address:</strong> 54 Vredehoek Avenue Vredehoek</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
     </div>
   </div>
 </div>
