--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css"  media="screen,projection"/>
+<html>
 
-      <title>pricklyPlant</title>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css" media="screen,projection" />
 
-      <!-- custom css -->
-      <link href="/main.css" rel="stylesheet">
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+  <title>pricklyPlant</title>
 
-    <body>
-      <nav>
+  <!-- custom css -->
+  <link href="/main.css" rel="stylesheet">
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <header>
+    <nav class="green darken-4">
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo ">Prickly Plant</a>
       </div>
     </nav>
-      {{{body}}}
+  </header>
+  <main>
+    {{{body}}}
+  </main>
+  <footer class="page-footer green darken-4">
+    <div class="footer-copyright">
+      <div class="textContainer">
+        By Nurha Leite
+        <!-- <a class="grey-text text-lighten-4 right" href="#!"></a> -->
+      </div>
+    </div>
+  </footer>
+  <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
 
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
-    </body>
+</body>
 
-    <footer class="page-footer">
-        <div class="footer-copyright">
-          <div class="textContainer">
-              By Nurha Leite
-          <!-- <a class="grey-text text-lighten-4 right" href="#!"></a> -->
-            </div>
-          </div>
-      </footer>
-  </html>
+
+</html>
