Added sales and purchases tables and refactored code

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,7 +22,7 @@
     <div class="col s4">
       <a href='/purchases'><i class="large material-icons orange-text">shopping_cart</i>
       <br/>
-      <small>Suppliers</small>
+      <small>Purchases</small>
       </a>
     </div>
     <div class="col s4">
