--- a/views/sales.handlebars
+++ b/views/sales.handlebars
@@ -1,15 +1,41 @@
 <div class='container'>
   <h1>Sales</h1>
   <div class='row'>
-    <div class='col-xs-12'>
-      <div class='table-responsive'>
-        <table class='table table-striped'>
-          <thead>
-            <tr>
-              <th>Sales</th>
-            </tr>
-          </thead>
-        </table>
+    <table class='table table-striped'>
+      <thead>
+        <tr>
+          <th>Sales List</th>
+        </tr>
+      </thead>
+    </table>
+    <div class="divider"></div>
+    <div class="section">
+      <h5>Slip N.O 01</h5>
+      <div class="row">
+        <div class="col s12 m6 l3"><p><strong>Date:</strong> 25/01/2016</p></div>
+        <div class="col s12 m6 l3"><p><strong>Items:</strong> Peyote Small</p></div>
+        <div class="col s12 m6 l3"><p><strong>Price:</strong> R150</p></div>
+        <div class="col s12 m6 l3"><p><strong>Total:</strong> R150</p></div>
+      </div>
+    </div>
+    <div class="divider"></div>
+    <div class="section">
+      <h5>Slip N.O 02</h5>
+      <div class="row">
+        <div class="col s12 m6 l3"><p><strong>Date:</strong> 25/01/2016</p></div>
+        <div class="col s12 m6 l3"><p><strong>Items:</strong> Mixed Pot Large</p></div>
+        <div class="col s12 m6 l3"><p><strong>Price:</strong> R200</p></div>
+        <div class="col s12 m6 l3"><p><strong>Total:</strong> R200</p></div>
+      </div>
+    </div>
+    <div class="divider"></div>
+    <div class="section">
+      <h5>Slip N.O 03</h5>
+      <div class="row">
+        <div class="col s12 m6 l3"><p><strong>Date:</strong> 26/01/2016</p></div>
+        <div class="col s12 m6 l3"><p><strong>Items:</strong> Mixed Pot Small</p></div>
+        <div class="col s12 m6 l3"><p><strong>Price:</strong> R50</p></div>
+        <div class="col s12 m6 l3"><p><strong>Total:</strong> R50</p></div>
       </div>
     </div>
   </div>
