--- a/views/suppliers.handlebars
+++ b/views/suppliers.handlebars
@@ -6,7 +6,7 @@
         <table class='table table-striped'>
           <thead>
             <tr>
-              <th>Supplier Name</th>
+              <th>Suppliers List</th>
             </tr>
           </thead>
         </table>
