--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -6,7 +6,7 @@
         <table class='table table-striped'>
           <thead>
             <tr>
-              <th>Categories</th>
+              <th>Categories List</th>
             </tr>
           </thead>
         </table>
