--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
   <header>
     <nav class="green darken-4">
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo ">Prickly Plant</a>
+        <a href="/" class="brand-logo center">Prickly Plant</a>
       </div>
     </nav>
   </header>
@@ -37,8 +37,5 @@
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
-
-</body>
-
-
+  </body>
 </html>
