--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,1 +1,12 @@
-<h1>Products</h1>
+<div class='container'>
+  <h1>Products</h1>
+  <div class='row'>
+    <table>
+      <thead>
+        <tr>
+          <th>Products List</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+</div>
