added a product to products table

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,9 +8,9 @@
       </a>
     </div>
     <div class="col s4">
-      <a href='/categories'><i class="large material-icons orange-text">description</i>
+      <a href='/saleItems'><i class="large material-icons orange-text">description</i>
       <br/>
-      <small>Categories</small>
+      <small>Special Offers</small>
       </a>
     </div>
     <div class="col s4">
