--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -4,9 +4,21 @@
     <table>
       <thead>
         <tr>
-          <th>Products List</th>
+          <th>Categories List</th>
         </tr>
       </thead>
     </table>
+    <div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/firstProduct.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Peyote<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Peyote<i class="material-icons right">close</i></span>
+      <p>The slowest growing of all the cacti.</br><strong>Price </strong>| R150 each</p>
+    </div>
+  </div>
   </div>
 </div>
