--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -8,17 +8,19 @@
         </tr>
       </thead>
     </table>
+    {{#data}}
     <div class="card">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/firstProduct.jpg">
+      <img class="activator" src="{{image}}">
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Peyote<i class="material-icons right">more_vert</i></span>
+      <span class="card-title activator grey-text text-darken-4">{{name}}<i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Peyote<i class="material-icons right">close</i></span>
-      <p>The slowest growing of all the cacti.</br><strong>Price </strong>| R150 each</p>
+      <span class="card-title grey-text text-darken-4">{{name}}<i class="material-icons right">close</i></span>
+      <p>{{description}}</br><strong>Price </strong>| R{{price}} each</p>
     </div>
   </div>
+  {{/data}}
   </div>
 </div>
