added second product

--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -41,6 +41,26 @@
           </div>
         </div>
       </li>
+      <li>
+        <div class="collapsible-header"><i class="material-icons">place</i><strong>Ntombi</strong></div>
+        <div class="collapsible-body">
+          <div class="row">
+            <div class="col s12 m4"><strong>Contact:</strong> 078 797 4167</div>
+            <div class="col s12 m4"><strong>Email:</strong> ntombi@gmail.com</div>
+            <div class="col s12 m4"><strong>Address:</strong> 54 Vredehoek Avenue Vredehoek</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="collapsible-header"><i class="material-icons">place</i><strong>Taariq</strong></div>
+        <div class="collapsible-body">
+          <div class="row">
+            <div class="col s12 m4"><strong>Contact:</strong> 078 797 4167</div>
+            <div class="col s12 m4"><strong>Email:</strong> ntombi@gmail.com</div>
+            <div class="col s12 m4"><strong>Address:</strong> 54 Vredehoek Avenue Vredehoek</div>
+          </div>
+        </div>
+      </li>
     </ul>
 
   </div>
