--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -20,5 +20,17 @@
       <p>The slowest growing of all the cacti.</br><strong>Price </strong>| R150 each</p>
     </div>
   </div>
+  <div class="card">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="images/firstProduct.jpg">
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">San Perdo<i class="material-icons right">more_vert</i></span>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">San Pedro<i class="material-icons right">close</i></span>
+    <p>The fastest growing of all the cacti.</br><strong>Price </strong>| R180 each</p>
+  </div>
+</div>
   </div>
 </div>
